--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -20,42 +20,79 @@
       {
         border: 1px solid blue;
       }
+      .bounce_button {
+  animation-name: bounce;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes bounce {
+  from {
+    margin:5px
+
+  }
+  to {
+    margin:15px;
+  }
+}
     </style>
   </head>
   <body class="">
+    <section class="fixed top-0 z-10 w-[100%] flex p-[5px] py-[15px] laptop:px-[70px] items-center justify-between bg-[rgba(0,0,0,0.4)]">
+      <div class="flex items-center space-x-[5px]">
+        <img src="./img/Icon colour Purple.png" class="w-[30px]" alt="">
+        <span class="font-bold text-[20px] dark:text-white">Optimus</span>
+      </div>
+      <nav class="tablet:hidden">
+        <i class="fas fa-bars p-[5px]"></i>
+      </nav>
+  
+      <nav class="hidden space-x-[40px] tablet:flex">
+        <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500">Home</a>
+        <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500">About</a>
+        <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500">Contact</a>
+      </nav>
+    </section>
     
-<div class="relative" style="background-image: linear-gradient(0deg, rgb(133, 116, 116), rgb(109, 109, 102) );background-size:100%; object-fit:cover; background-repeat:no-repeat; background-position: center; background-size: cover;
+<div class="relative" style="background-image: linear-gradient(0deg, rgba(7, 6, 6, 0.801), rgba(19, 19, 18, 0.692)), url(./img/green-chameleon-s9CC2SKySJM-unsplash.jpg);background-size:100%; object-fit:cover; background-repeat:no-repeat; background-position: center; background-size: cover;
 ">
-  <div class="absolute"></div>
-  <section class="flex p-[5px] items-center justify-between">
-    <div class="flex items-center space-x-[5px]">
-      <img src="./img/Icon colour Purple.png" class="w-[30px]" alt="">
-      <span class="font-bold text-[20px]">Optimus</span>
-    </div>
-    <nav class="tablet:hidden">
-      <i class="fas fa-bars p-[5px]"></i>
-    </nav>
-
-    <nav class="hidden space-x-[10px] tablet:flex">
-      <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] font-light hover:font-bold transition ease-in-out duration-500">Home</a>
-      <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] font-light hover:font-bold transition ease-in-out duration-500">About</a>
-      <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] font-light hover:font-bold transition ease-in-out duration-500">Contact</a>
-    </nav>
-  </section>
-
-  <section class="flex flex-col items-center justify-center min-h-[50vh] tablet:min-h-[100vh] space-y-3 pt-[20px] dark:text-white">
-    <p class="text-[20px] font-bold p-[10px] tablet:text-[5vw] border-[3px] border-slate-800">
+  <section class="flex flex-col items-center min-h-[60vh] tablet:min-h-[100vh] space-y-2 tablet:space-y-10 pt-[70px] text-white pb-[20px]">
+    <div class="text-[20px] font-bold p-[10px] tablet:text-[5vw] border-[3px] border-slate-800 mt-[30px] tablet:mt-[60px] laptop:mt-[100px]">
       HELLO <span class="font-black">I'M</span> JOSHUA
-    </p>
-    <p class="flex flex-col items-center border-slate-800">
-      <span class="text-[10px] tablet:text-[2vw]">Welcome to my website</span>
+    </div>
+    <div class="relative flex flex-col items-center mt-[40px] tablet:py-[30px]" style="width: 70%">
+      <span class="text-[10px] tablet:text-[20px]">Welcome to my website</span>
       <span class="text-center mx-2 text-[10px] tablet:text-[20px] laptop:text-[2vw]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, totam iste ea quasi est enim praesentium esse cupiditate excepturi</span>
-    </p>
-    <p class="mt-[90%]">
-      <i class="far fa-arrow-alt-circle-down"></i>
-    </p>
+    </div>
+    <div class="bounce_button relative p-3 mb-[100px] bg-gray-800 text-[10px] tablet:text-[20px]">
+     <span>Learn More</span> <i class="far fa-arrow-alt-circle-down"></i>
+    </div>
   </section>
 </div>
+
+<!-- About me section -->
+
+<section class="relative flex flex-col items-center tablet:flex-row py-[10px] tablet:py-[30px] min-h-[70vh]">
+<div class="flex flex-col items-start w-[100%] tablet:w-[100%] laptop:w-[60%] px-[30px] space-y-[20px]">
+<p>
+  <h1 class="text-[20px] laptop:text-[40px] font-semibold border border-l-[5px] pl-[5px]">About Me</h1>
+  <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sit praesentium corporis quo non hic, <span class=" laptop:inline">sed aperiam commodi accusamus, blanditiis itaque eum iure repellendus eos earum. Quisquam incidunt nemo temporibus!</span>
+</p>
+<button class="p-2 px-3 space-x-3 text-white bg-gray-800">
+  <i class="fas fa-file-download"></i> 
+  <span class="font-semibold">DOWNLOAD CV</span>
+</button>
+</div>
+</section> 
+
+<section class="relative flex flex-col min-h-[10vh] p-[25px]"> 
+  <div class="">
+div
+  </div>
+</section>
 
   <script>
     function darkModeToggle() {
