--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,45 +18,40 @@
     <style>
       *
       {
+        border: 1px solid rgba(255, 255, 255, 0.671);
         border: 1px solid blue;
       }
-      .bounce_button {
-  animation-name: bounce;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-}
-
-@keyframes bounce {
-  from {
-    margin:5px
-
-  }
-  to {
-    margin:15px;
-  }
-}
     </style>
   </head>
-  <body class="">
-    <section class="fixed top-0 z-10 w-[100%] flex p-[5px] py-[15px] laptop:px-[70px] items-center justify-between bg-[rgba(0,0,0,0.4)]">
-      <div class="flex items-center space-x-[5px]">
-        <img src="./img/Icon colour Purple.png" class="w-[30px]" alt="">
-        <span class="font-bold text-[20px] dark:text-white">Optimus</span>
+  <body class="dark:bg-black">
+    <section class="fixed top-0 z-10 w-[100%] flex flex-col p-[5px] py-[15px] px-[20px] laptop:px-[70px] items-center justify-between dark:bg-[rgba(0,0,0,0.4)] bg-[#fff]">
+      <div class="flex w-[100%] justify-between">
+        <div class="flex items-center space-x-[5px]">
+          <img src="./img/Icon colour Purple.png" class="w-[30px]" alt="">
+          <span class="font-bold text-[20px] dark:text-white">Optimus</span>
+        </div>
+        <nav class="tablet:hidden">
+          <i class="fas fa-bars dark:text-white  p-[5px]" onclick="navToggler()"></i>
+        </nav>
+    
+        <nav class="hidden space-x-[40px] tablet:flex">
+          <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500">Home</a>
+          <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500">About</a>
+          <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500">Contact</a>
+        </nav>
       </div>
-      <nav class="tablet:hidden">
-        <i class="fas fa-bars p-[5px]"></i>
-      </nav>
-  
-      <nav class="hidden space-x-[40px] tablet:flex">
-        <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500">Home</a>
-        <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500">About</a>
-        <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500">Contact</a>
-      </nav>
+      <div id="hidden-nav" class="hidden duration-500 w-[100%] min-h-[10vh]">
+        <nav class="flex flex-col items-center justify-between w-[100%] h-[100%] space-y-[50px]">
+          <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500 w-[100%] text-center">Home</a>
+          <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500 w-[100%] text-center">About</a>
+          <a href="#" class="hover:bg-[rgba(0,0,0,0.7)] hover:text-white p-[5px] px-[10px] dark:text-white font-light hover:font-bold transition ease-in-out duration-500 w-[100%] text-center">Contact</a>
+        </nav>
+      </div>
     </section>
     
 <div class="relative" style="background-image: linear-gradient(0deg, rgba(7, 6, 6, 0.801), rgba(19, 19, 18, 0.692)), url(./img/green-chameleon-s9CC2SKySJM-unsplash.jpg);background-size:100%; object-fit:cover; background-repeat:no-repeat; background-position: center; background-size: cover;
 ">
-  <section class="flex flex-col items-center min-h-[60vh] tablet:min-h-[100vh] space-y-2 tablet:space-y-10 pt-[70px] text-white pb-[20px]">
+  <section class="flex flex-col items-center min-h-[65vh] tablet:min-h-[105vh] space-y-2 tablet:space-y-10 pt-[70px] text-white pb-[20px]">
     <div class="text-[20px] font-bold p-[10px] tablet:text-[5vw] border-[3px] border-slate-800 mt-[30px] tablet:mt-[60px] laptop:mt-[100px]">
       HELLO <span class="font-black">I'M</span> JOSHUA
     </div>
@@ -64,7 +59,7 @@
       <span class="text-[10px] tablet:text-[20px]">Welcome to my website</span>
       <span class="text-center mx-2 text-[10px] tablet:text-[20px] laptop:text-[2vw]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, totam iste ea quasi est enim praesentium esse cupiditate excepturi</span>
     </div>
-    <div class="bounce_button relative p-3 mb-[100px] bg-gray-800 text-[10px] tablet:text-[20px]">
+    <div class="relative p-3 mb-[100px] bg-gray-800 text-[10px] tablet:text-[20px]">
      <span>Learn More</span> <i class="far fa-arrow-alt-circle-down"></i>
     </div>
   </section>
@@ -73,7 +68,7 @@
 <!-- About me section -->
 
 <section class="relative flex flex-col items-center tablet:flex-row py-[10px] tablet:py-[30px] min-h-[70vh]">
-<div class="flex flex-col items-start w-[100%] tablet:w-[100%] laptop:w-[60%] px-[30px] space-y-[20px]">
+<div class="flex flex-col items-start w-[100%] tablet:w-[100%] laptop:w-[60%] px-[30px] space-y-[20px] dark:text-white">
 <p>
   <h1 class="text-[20px] laptop:text-[40px] font-semibold border border-l-[5px] pl-[5px]">About Me</h1>
   <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
@@ -81,18 +76,40 @@
 <p>
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sit praesentium corporis quo non hic, <span class=" laptop:inline">sed aperiam commodi accusamus, blanditiis itaque eum iure repellendus eos earum. Quisquam incidunt nemo temporibus!</span>
 </p>
-<button class="p-2 px-3 space-x-3 text-white bg-gray-800">
+<button class="p-2 px-3 space-x-3 text-white bg-black dark:bg-white dark:text-black">
   <i class="fas fa-file-download"></i> 
   <span class="font-semibold">DOWNLOAD CV</span>
 </button>
 </div>
 </section> 
 
-<section class="relative flex flex-col min-h-[10vh] p-[25px]"> 
-  <div class="">
-div
+<section class="relative flex flex-col space-y-5 min-h-[10vh] p-[25px] tablet:hidden"> 
+  <div class="min-h-[15vh] py-[5px] pt-[10px] flex flex-col space-y-2 items-center justify-center text-black dark:text-white">
+    <i class="fas fa-laptop  text-[50px] hover:text-[60px] duration-500"></i>
+    <div class="text-center w-[75%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi labore consectetur soluta a? Delectus alias reprehenderit.</span>
+  </div>
+
+  <div class="min-h-[15vh] py-[5px] pt-[10px] flex flex-col space-y-2 items-center justify-center text-black dark:text-white">
+    <i class="far fa-tablet  text-[50px] hover:text-[60px] duration-500"></i>
+    <div class="text-center w-[75%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi labore consectetur soluta a? Delectus alias reprehenderit.</span>
+  </div>
+
+  <div class="min-h-[15vh] py-[5px] pt-[10px] flex flex-col space-y-2 items-center justify-center text-black dark:text-white">
+    <i class="far fa-database text-[50px] hover:text-[60px] duration-500"></i>
+    <div class="text-center w-[75%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi labore consectetur soluta a? Delectus alias reprehenderit.</span>
   </div>
 </section>
+
+<section class="hidden tablet:flex justify-between min-h-[10vh] p-[20px]">
+  <p class="flex flex-col items-center justify-center dark:text-white min-h-[15vh] min-w-[30%] bg-white">Div</p>
+  <p class="flex flex-col items-center justify-center dark:text-white min-h-[15vh] min-w-[30%] bg-white">Div</p>
+  <p class="flex flex-col items-center justify-center dark:text-white min-h-[15vh] min-w-[30%] bg-white">Div</p>
+</section>
+
+<button onclick="darkModeToggle()" class="p-[10px] fixed top-[70vh] left-[80%] tablet:left-[90vw] hover:text-[20px] duration-300 bg-black dark:bg-white">
+  <i class="fas fa-sun hidden dark:block"></i>
+  <i class="fa fa-moon text-white dark:hidden"></i>
+</button>
 
   <script>
     function darkModeToggle() {
